--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,16 @@
 asgiref==3.4.1
 autopep8==1.5.7
+backports.zoneinfo==0.2.1
 crispy-bootstrap5==0.5
+dj-database-url==0.5.0
 Django==3.2.7
 django-crispy-forms==1.12.0
+django-environ==0.6.0
+django-heroku==0.3.1
+psycopg==3.0b1
+psycopg2==2.9.1
 pycodestyle==2.7.0
 pytz==2021.1
 sqlparse==0.4.1
 toml==0.10.2
+whitenoise==5.3.0
