--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ Django==3.2.7
 django-crispy-forms==1.12.0
 django-environ==0.6.0
 django-heroku==0.3.1
+gunicorn==20.1.0
 psycopg==3.0b1
 psycopg2==2.9.1
 pycodestyle==2.7.0
